fix: agilizar cocina y sincronizar reportes